// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render header four variant without error 1`] = `
<div>
  <h4
    class="heading heading-4 extra-heading-class"
    data-testid="headingTestId"
  >
    Header Four Content
  </h4>
</div>
`;

exports[`<Heading /> should render header one variant without error 1`] = `
<div>
  <h1
    class="heading heading-1 extra-heading-class"
    data-testid="headingTestId"
  >
    Header One Content
  </h1>
</div>
`;

exports[`<Heading /> should render header three variant without error 1`] = `
<div>
  <h3
    class="heading heading-3 extra-heading-class"
    data-testid="headingTestId"
  >
    Header Three Content
  </h3>
</div>
`;

exports[`<Heading /> should render header two variant without error 1`] = `
<div>
  <h2
    class="heading heading-2 extra-heading-class"
    data-testid="headingTestId"
  >
    Header Two Content
  </h2>
</div>
`;
